name:               stm-delay
version:            0.1
synopsis:           Updatable one-shot timer polled with STM
description:
    This library lets you create a one-shot timer, poll it using STM,
    and update it to ring at a different time than initially specified.
    .
    It uses GHC event manager timeouts when available (GHC 7.2+, @-threaded@,
    non-Windows OS), yielding performance similar to @threadDelay@ and
    @registerDelay@.  Otherwise, it falls back to forked threads and
    @threadDelay@.
homepage:           https://github.com/joeyadams/haskell-stm-delay
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2012
category:           System
build-type:         Simple
cabal-version:      >=1.8

source-repository head
    type:       git
    location:   git://github.com/joeyadams/haskell-stm-delay.git

library
    exposed-modules:
        Control.Concurrent.STM.Delay

    ghc-options: -Wall -fwarn-tabs

    build-depends: base >= 4.3
                 , stm

    -- Need base >= 4.3 for:
    --
    --  * Control.Exception.mask
    --
    --  * forkIOUnmasked
    --
    --  * A threadDelay that doesn't give (-1) magic treatment.
    --    See http://hackage.haskell.org/trac/ghc/ticket/2892
    --
    --  * GHC.Event (called System.Event in base 4.3)
